fixing poster frames

--- a/src/html/content/share_and_replay.mustache
+++ b/src/html/content/share_and_replay.mustache
@@ -1,5 +1,5 @@
 <div class="share_block">
-	<p>The journey you have just been on is only one of many trod every day by refugees fleeing war and famine. When their journey is over, they, of course, don't have the luxury of starting again to see how things could have worked out differently. But if you would like to, you can start again using the button below. Or you can share the journey you have completed.</p>
+	<p>The journey you have just been on is only one of many trod every day by refugees fleeing war and famine. When their journey is over, they, of course, do not have the luxury of starting again to see how things could have worked out differently. But if you would like to, you can start again using the button below. Or you can share the journey you have completed.</p>
 
 	<div class="share_links">
 	    <button class="share-twitter">
