--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,7 +1,10 @@
 @import '_base';
+@import '_fonts';
 
-figure {
+figure.interactive {
     margin: 0;
+    max-width: 800px;
+    margin: auto;
 }
 
 .game_wrapper {
@@ -39,6 +42,10 @@ figure {
         }
     }
 
+    h2 {
+        margin: 1em 0;
+    }
+
     a{
         color:#aaa;
         text-decoration: none;
@@ -56,7 +63,6 @@ figure {
         // http://alistapart.com/article/creating-intrinsic-ratios-for-video/
         .video_wrapper {
             position: relative;
-            padding-top: 25px;
             padding-bottom: 56.25%;
             height: 0;
         }
@@ -84,7 +90,7 @@ figure {
         background-repeat: no-repeat;
         background-size: contain;
         padding: 42% 10px 0 10px;
-        font-family: Georgia, serif;
+        font-family: "EgyptianText", Georgia, serif;
 
         &.disabled {
             opacity:0.5;
@@ -128,9 +134,10 @@ figure {
         color: rgb(255,255,255);
         padding: 10px;
         margin: 0;
-        font-size:12px;
+        font-size: 26px;
         font-weight: normal;
-        font-family: Arial, sans-serif;
+        font-family: "EgyptianHeadline", georgia, serif;
+        line-height: normal;
     }
 
     .scene-inner {
@@ -160,7 +167,7 @@ figure {
 
     .choice-text {
         font-size:16px;
-        font-family:Arial, sans-serif;
+        font-family: "AgateSans", Arial, sans-serif;
         line-height:1.5em;
         color:#565656;
     }
@@ -171,7 +178,7 @@ figure {
     }
 
     .choice-btn {
-        font-family: Arial, sans-serif;
+        font-family: "AgateSans", Arial, sans-serif;
         border: 1px solid #8F8C7F;
         background-color: #CCCCB2;
         border-radius:3px;
@@ -243,11 +250,11 @@ figure {
     .game_wrapper {
         .scene-inner {
             padding: 30px;
-        }   
+        }
 
         .scene {
             padding: 48% 40px 0 40px;
-            font-family: Georgia, serif;
+            font-family: "EgyptianText", Georgia, serif;
 
             &.disabled {
                opacity:0.5;
