More r2 font tweaks

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -44,6 +44,8 @@ figure.interactive {
 
     h2 {
         margin: 1em 0;
+        font-family: "EgyptianHeadline", georgia, serif;
+        font-size: 21px;
     }
 
     a{
