text and video changes

--- a/src/html/content/asylum_2.mustache
+++ b/src/html/content/asylum_2.mustache
@@ -1,5 +1,3 @@
-<p>Bad news. You can’t fly to Sweden because you don’t have a visa. As the war has worsened, European countries have increased visa restrictions for Syrians.</p>			
+<p>There is bad news. You can’t fly to Sweden because you don’t have a visa. There is no such thing as a visa specifically for asylum seekers, you would have to apply to study or visit as a tourist and then apply once you arrived in northern Europe. These visas are almost impossible to get and there are no longer functioning embassies for most EU countries in Damascus where you could apply.</p>
 
-<p>There are now almost no legal ways for Syrians to reach Europe, even though some countries are giving refugee status to nearly all Syrians who do make it there.</p>			
-
-<p>You have only one choice now. You have to travel overland if you want to leave Syria.</p>
+<p>There are now almost no legal ways for Syrians to reach Europe apart from the UNHCR resettlement scheme.  You would need to make it to a refugee camp to apply to be part of it.</p>
