--- a/src/html/content/bulgaria_again.mustache
+++ b/src/html/content/bulgaria_again.mustache
@@ -1,8 +1,8 @@
-<p>You are convinced you have to do whatever it takes to get your children into Europe. You will attempt the crossing to Bulgaria again. Again, when you reach the border you are picked up by guards but this time, they drive you into Bulgaria, bound for one of several camps that have been set up to house Syrian refugees. You are taken to Harmanli camp. It is an open air detention centre and you are not allowed to leave. You are unable to move further into Europe or turn back and return to Turkey. The conditions are terrible. There is next to no official presence, no reception process and very little food.</p>
+<b>You feel you must continue to try and reach Europe, so you attempt the crossing to Bulgaria again. This time when you reach the border the guards that pick you up take you to one of several camps that have been set up to house Syrian refugees, you are told that the camp is called Harmanli. It is an open air detention centre and you are not allowed to leave, so there is no chance to move further into Europe or to turn back and return to Turkey. The conditions are extremely bad, with little or no official presence, no reception process and very little food.</p>
 
-<p>Many thousands of migrants, not only Syrians, but Afghans, Bangladeshis and even some Africans have started to take what was previously a barely used route into the EU, from Turkey and into Bulgaria. Amnesty International estimate that 5,000 refugees from Syria arrived between January and November 2013.</p>
+<p>Many thousands of migrants, not only Syrians, but Afghans, Bangladeshis and even some Africans have started to take what was previously a barely used route into the EU, from Turkey and into Bulgaria. Amnesty international estimate that 5,000 refugees from Syria arrived between January and November 2013.</p>
 
-<p>At Harmanli, the Guardian found a lack of official support for newly arrived refugees, many of them women and children, and dire conditions.</p>
+<p>In a recent visit to Harmanli, the Guardian found a lack of official support for newly arrived refugees, many of them women and children, and very poor conditions inside.</p>
 
 <h2>A Harmanli story</h2>
 <div class="video_wrapper">
