--- a/src/html/content/refugee_life_in_italy.mustache
+++ b/src/html/content/refugee_life_in_italy.mustache
@@ -1,9 +1,31 @@
-<p>When you find border officials in Bari you want to claim asylum. They give you a cash payment of 200 euros and train tickets to Rome where you claim asylum and are given a temporary place to stay.</p> 
+<p>You claim asylum at the port in Bari are sent to Rome where you are given a temporary place to stay.</p>
 
-<p>Eventually you are given refugee status, but there is no welfare support or housing, as there would have been in Sweden or the UK. You rely on church groups for food and Italian lessons.</p> 
+<p>You are eventually given refugee status, but the Italian state’s asylum protection system (SPRAR) has a long waiting list. Without housing or any kind of benefits, you move into <a href="http://www.theguardian.com/world/2011/oct/07/dublin-regulation-european-asylum-seekers">one of the many squats which are home to thousands of people in your situation</a>.</p>
 
-<p>In 2011 the Guardian found hundreds of recognised refugees, including children, sleeping in the street in Rome.</p> 
+<p>Last month the Guardian visited one known as Salaam (“Peace”) Palace. Freezing, dirty and with patchy electricity, it was home to around 1,200 people, including dozens of children.</p>  
 
-<p>Unfortunately you can’t move on now. Under the <a href="http://www.theguardian.com/world/2011/oct/07/dublin-regulation-european-asylum-seekers">‘Dublin’ system, refugees can only seek asylum in the first EU country they enter</a>. You have been fingerprinted in Rome and your prints are available to border guards across Europe. </p>
+<p>Many refugees in Rome are worse off than this, sleeping rough in the city centre.</p>
 
-<p>You have no option but to struggle on, try to learn Italian and rely on the support of the churches and other refugees.</p>
+<h2>Watch - Refugees on the streets of Rome</h2>
+<div class="video_wrapper">
+    <video id="video" controls="" preload="none" poster="http://static.guim.co.uk/sys-images/Guardian/Pix/pictures/2014/1/9/1389286425766/vlcsnap-2013-12-20-16h57m47s41.png">
+        <source id="mp4" src="http://cdn.theguardian.tv/interactive/mp4/768/2014/01/10/RomeStreetsForInteractive_h264i.mp4" type="video/mp4">
+        <source id="webm" src="http://cdn.theguardian.tv/interactive/WebM/768/2014/01/10/RomeStreetsForInteractive.webm" type="video/webm">
+        <source id="ogv" src="http://cdn.theguardian.tv/interactive/oggv/768/2014/01/10/RomeStreetsForInteractive_h264i.ogv" type="video/ogg">
+        <p>Your user agent does not support the HTML5 Video element.</p>
+    </video>
+</div>
+
+
+
+<p>You can’t leave Italy now though. Under the <a href="http://www.theguardian.com/world/2011/oct/07/dublin-regulation-european-asylum-seekers">‘Dublin’ system</a>, refugees can only seek asylum in the first EU country they enter. Wherever you go now, your fingerprints will trace you back to Italy and you can be sent straight back here.</p>  
+
+<h2>Watch - The Dublin system in action</h2>
+<div class="video_wrapper">
+    <video id="video" controls="" preload="none" poster="http://static.guim.co.uk/sys-images/Guardian/Pix/pictures/2014/1/9/1389286425766/vlcsnap-2013-12-20-16h57m47s41.png">
+        <source id="mp4" src="http://cdn.theguardian.tv/interactive/mp4/768/2014/01/10/DublinSystemForInteractive_h264i.mp4" type="video/mp4">
+        <source id="webm" src="http://cdn.theguardian.tv/interactive/WebM/768/2014/01/10/DublinSystemForInteractive.webm" type="video/webm">
+        <source id="ogv" src="http://cdn.theguardian.tv/interactive/oggv/768/2014/01/10/DublinSystemForInteractive_h264i.ogv" type="video/ogg">
+        <p>Your user agent does not support the HTML5 Video element.</p>
+    </video>
+</div>
