--- a/src/html/content/refugee_life_in_sweden.mustache
+++ b/src/html/content/refugee_life_in_sweden.mustache
@@ -1,3 +1,11 @@
-<p>You are given a place to stay in a hostel for families, put in touch with Syrian support groups and given access to a basic benefit that will help you survive until your asylum claim is heard.</p> 
+<p>You are given a place to stay in a hostel for families and given access to a basic benefit that will help you survive until your asylum claim is heard.</p>
 
-<p>There is now a Common EU Asylum System - it came into operation in summer 2014 - but nobody denies that the way refugees are treated varies wildly from country to country. In the UK, Sweden and Germany, asylum seekers are given housing while their claim is processed, and support once they are granted refugee status. This is not always the case in Greece, Italy or the eastern European countries like Bulgaria. Experts warn that as long as these differences exist, people will continue to make dangerous journeys overland to reach a country that promises safety and support.</p>
+<p>You explain to the officials why you left Syria and within a month you are told you have permanent residence, an offer they have made to nearly all Syrians since September 2013. You are given social housing and free Swedish lessons.</p>
+
+<p>The way that refugees are treated varies wildly from country to country. Experts warn that as long as these differences exist, people will continue to make dangerous journeys to reach countries where they feel have support in the challenging task of building a new life.</p>
+
+<p>Of all the Syrians who have claimed asylum in Europe since the conflict began, around 55,000 people, more than 70 per cent made their claims in just two countries, Germany and Sweden.</p>
+
+<p>In 2012 the Swedes received 7,814 asylum requests from Syrians - more than France, the UK, the US, Australia and Canada combined. 12,000 Syrians have applied for asylum since September 2013 when the offer of permanent residency was announced.</p>
+
+<p>But the vast majority of exiled Syrians are nowhere near Sweden. Instead they carry on with their suspended lives in the refugee camps of Jordan, Lebanon and Turkey.</p>
