--- a/src/html/content/sweden_via_italy.mustache
+++ b/src/html/content/sweden_via_italy.mustache
@@ -1,2 +1,2 @@
-<p>You and your children get on a boat at Patras, hidden in the back of a lorry. When you arrive in Italy, you manage to creep off the boat undetected.</p>
+<p>You and your children get on a boat at Patras, hidden away in a lorry. When you arrive in Bari you manage to leave the port undetected.</p>
 <p>You now have two choices.</a>
