--- a/src/html/content/into_greece.mustache
+++ b/src/html/content/into_greece.mustache
@@ -1,3 +1,3 @@
-<p>You pay the smugglers again and this time, make it across the border. The smugglers see you as far as Athens where you have the contact details of a church that helps refugee families. They give you a floor space to sleep on with your children and hot food each day.</p>
+<p>You pay the smugglers again and this time make it across the border. The smugglers help you to get as far as Athens where you have the contact details of a church that helps refugee families. They give you a floor space to sleep on with your children and hot food each day.</p>
 
 <p>Now you are here you have two choices.</p>
