--- a/src/html/content/life_in_athens.mustache
+++ b/src/html/content/life_in_athens.mustache
@@ -1,7 +1,7 @@
-<p>You have connections within the refugee community in Athens, and there are Church groups who provide food for families with children. But one day, when you are waiting outside the church at lunchtime, police arrive in force and take you and your children to a detention centre.</p> 
+<p>You have connections within the refugee community in Athens, and there are church groups who provide food for families with children. But one day, when you are waiting outside the church at lunchtime, police arrive in force and take you and your children to a detention centre.</p> 
 
 <p>Thousands of migrants and asylum seekers are detained in Greece each year in what have been described as "<a href="ttp://www.amnesty.org/en/library/asset/EUR25/014/2013/en/cd88850b-c123-417a-857e-b41d6a743cd3/eur250142013en.html">appalling conditions</a>," by the EU home affairs commissioner.</p> 
 
 <p>The economic problems Greece faces have fueled tensions between local and migrant communites - there is a surge in racist attacks targetting refugees.</p> 
 
-<p>Eventually you are released from the detention centre - the Greek government has a new policy of letting Syrians out of detention if they have identification. But you still have no legal right to live here. You join thousands of other refugees who live a precarious existence in Greece, relying on Churches and charities to survive.</p>
+<p>Eventually you are released from the detention centre - the Greek government has a new policy of letting Syrians out of detention if they have identification. But you still have no legal right to live here. You join thousands of other refugees who live a precarious existence in Greece, relying on churches and charities to survive.</p>
