--- a/src/html/view_scene.mustache
+++ b/src/html/view_scene.mustache
@@ -1,8 +1,11 @@
 <div class="scene">
+    
+    <div class="scene-title">
+    <h2>{{ title }}</h2>
     {{#coverCredit}}
         <p class="photocredit">{{ coverCredit }}</p>
     {{/coverCredit}}
-    <h2 class="scene-title">{{ title }}</h2>
+    </div>
     <div class="scene-inner">
 
         <div class="scene-copy">
