added pointer on share buttons

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -38,6 +38,7 @@ figure.interactive {
         button{
             border:none;
             background:none;
+            cursor:pointer;
 
             &:hover{
                 background:none;
