--- a/src/html/content/stay_in_turkey.mustache
+++ b/src/html/content/stay_in_turkey.mustache
@@ -2,4 +2,14 @@
 
 <p>You have the support and friendship of a large Syrian community, either in the camp or in cities such as Istanbul if you choose to move there and work under the radar. Officially there are now nearly 600,000 Syrian refugees in Turkey, as well as refugees from Iran, Iraq and Turkey.</p>
 
+<h2>Watch - Why Syrians stay in Istanbul</h2>
+<div class="video_wrapper">
+    <video id="video" controls="" preload="none" poster="http://static.guim.co.uk/sys-images/Guardian/Pix/pictures/2014/1/9/1389286425766/vlcsnap-2013-12-20-16h57m47s41.png">
+        <source id="mp4" src="http://cdn.theguardian.tv/interactive/mp4/768/2014/01/10/Istanbulforinteractive_h264i.mp4" type="video/mp4">
+        <source id="webm" src="http://cdn.theguardian.tv/interactive/WebM/768/2014/01/10/Istanbulforinteractive.webm " type="video/webm">
+        <source id="ogv" src="http://cdn.theguardian.tv/interactive/oggv/768/2014/01/10/Istanbulforinteractive_h264i.ogv" type="video/ogg">
+        <p>Your user agent does not support the HTML5 Video element.</p>
+    </video>
+</div>
+
 <p>One of your friends in Turkey has a Palestinian grandfather who has been living in the same camp in Lebanon since 1948. You hope that Syria will be peaceful one day so you can go home - but live with a daily dread that you and your children will live the rest of your lives in limbo.</p>
