--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -16,10 +16,11 @@ figure.interactive {
     position: relative;
     -webkit-font-smoothing: antialiased;
 
+    .scene{
     .share_block{
         border-top:1px dotted #fff;
         border-bottom:1px dotted #fff;
-        padding: 30px 0;
+        padding: 30px 0 25px;
         margin:50px 0;
 
         p{
@@ -29,10 +30,12 @@ figure.interactive {
             margin: 0 auto;
             line-height:1.5em;
             margin-bottom:10px;
+            font-family: "AgateSans", Arial, sans-serif;
         }
 
         .share_links{
             text-align:center;
+            margin-top:20px;
         }
 
         button{
@@ -45,6 +48,7 @@ figure.interactive {
                 border:none;
             }
         }
+    }
     }
 
     h2 {
@@ -229,7 +233,7 @@ figure.interactive {
         &.restart{
             background-color:#fff;
             border:none;
-            margin:20px auto 0;
+            margin:10px auto 20px;
             font-weight:bold;
             color:#333;
             padding:12px 60px;
