--- a/src/html/content/bulgaria.mustache
+++ b/src/html/content/bulgaria.mustache
@@ -5,7 +5,7 @@
 
 <h2>Watch - How illegal pushbacks divided my family</h2>
 <div class="video_wrapper">
-    <video id="video" controls="" preload="none" poster="http://static.guim.co.uk/sys-images/Guardian/Pix/pictures/2014/1/9/1389286425766/vlcsnap-2013-12-20-16h57m47s41.png">
+    <video id="video" controls="" preload="none" poster="http://static.guim.co.uk/sys-images/Guardian/Pix/pictures/2014/1/13/1389607661206/BulgBorderforInteractive_8539696.jpg">
         <source id="mp4" src="http://cdn.theguardian.tv/interactive/mp4/768/2014/01/10/BulgBorderforInteractive_h264i.mp4" type="video/mp4">
         <source id="webm" src="http://cdn.theguardian.tv/interactive/WebM/768/2014/01/10/BulgBorderforInteractive.webm" type="video/webm">
         <source id="ogv" src="http://cdn.theguardian.tv/interactive/oggv/768/2014/01/10/BulgBorderforInteractive_h264i.ogv" type="video/ogg">
