--- a/src/html/content/refugee_life_in_italy.mustache
+++ b/src/html/content/refugee_life_in_italy.mustache
@@ -8,7 +8,7 @@
 
 <h2>Watch - Refugees on the streets of Rome</h2>
 <div class="video_wrapper">
-    <video id="video" controls="" preload="none" poster="http://static.guim.co.uk/sys-images/Guardian/Pix/pictures/2014/1/9/1389286425766/vlcsnap-2013-12-20-16h57m47s41.png">
+    <video id="video" controls="" preload="none" poster="http://static.guim.co.uk/sys-images/Guardian/Pix/pictures/2014/1/13/1389607801514/RomeStreetsForInteractive_8539414.jpg">
         <source id="mp4" src="http://cdn.theguardian.tv/interactive/mp4/768/2014/01/10/RomeStreetsForInteractive_h264i.mp4" type="video/mp4">
         <source id="webm" src="http://cdn.theguardian.tv/interactive/WebM/768/2014/01/10/RomeStreetsForInteractive.webm" type="video/webm">
         <source id="ogv" src="http://cdn.theguardian.tv/interactive/oggv/768/2014/01/10/RomeStreetsForInteractive_h264i.ogv" type="video/ogg">
@@ -22,7 +22,7 @@
 
 <h2>Watch - The Dublin system in action</h2>
 <div class="video_wrapper">
-    <video id="video" controls="" preload="none" poster="http://static.guim.co.uk/sys-images/Guardian/Pix/pictures/2014/1/9/1389286425766/vlcsnap-2013-12-20-16h57m47s41.png">
+    <video id="video" controls="" preload="none" poster="http://static.guim.co.uk/sys-images/Guardian/Pix/pictures/2014/1/13/1389607735072/DublinSystemForInteractive_8539469.jpg">
         <source id="mp4" src="http://cdn.theguardian.tv/interactive/mp4/768/2014/01/10/DublinSystemForInteractive_h264i.mp4" type="video/mp4">
         <source id="webm" src="http://cdn.theguardian.tv/interactive/WebM/768/2014/01/10/DublinSystemForInteractive.webm" type="video/webm">
         <source id="ogv" src="http://cdn.theguardian.tv/interactive/oggv/768/2014/01/10/DublinSystemForInteractive_h264i.ogv" type="video/ogg">
