--- a/src/html/content/stay_in_turkey.mustache
+++ b/src/html/content/stay_in_turkey.mustache
@@ -4,7 +4,7 @@
 
 <h2>Watch - Why Syrians stay in Istanbul</h2>
 <div class="video_wrapper">
-    <video id="video" controls="" preload="none" poster="http://static.guim.co.uk/sys-images/Guardian/Pix/pictures/2014/1/9/1389286425766/vlcsnap-2013-12-20-16h57m47s41.png">
+    <video id="video" controls="" preload="none" poster="http://static.guim.co.uk/sys-images/Guardian/Pix/pictures/2014/1/13/1389607899313/Istanbulforinteractive_8539873_(1).jpg">
         <source id="mp4" src="http://cdn.theguardian.tv/interactive/mp4/768/2014/01/10/Istanbulforinteractive_h264i.mp4" type="video/mp4">
         <source id="webm" src="http://cdn.theguardian.tv/interactive/WebM/768/2014/01/10/Istanbulforinteractive.webm " type="video/webm">
         <source id="ogv" src="http://cdn.theguardian.tv/interactive/oggv/768/2014/01/10/Istanbulforinteractive_h264i.ogv" type="video/ogg">
