--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -146,6 +146,7 @@ figure.interactive {
         margin: 0 auto;
         width:100%;
         max-width: 300px;
+        border:3px solid rgba(0,0,0,0.1)
     }
 
     .scene-title {
@@ -295,8 +296,9 @@ figure.interactive {
         }
         .insert-image {
             float: right;
-            max-width:200px;
-            margin: 0 0 5px 5px;
+            max-width:300px;
+            margin: 0 0 5px 10px;
+            border:3px solid rgba(0,0,0,0.1)
         }
 
         .scene {
