final copy changes

--- a/src/html/content/greek_border.mustache
+++ b/src/html/content/greek_border.mustache
@@ -1,6 +1,6 @@
 <p>If you make it to northern Europe you have the chance of international protection, including the right to work and a normal life until it is safe to return to Syria. You set off with your children to Istanbul, where friends in the Syrian community put you in touch with a people smuggler who promises - for a price - to help you cross the Greek border.</p>
 
-<p>Unfortunately you are stopped by border guards who are abusive towards you and take you back in Turkey without giving you the chance to ask for asylum in Greece.</p>
+<p>Unfortunately you are stopped by border guards who are abusive towards you and take you back into Turkey without giving you the chance to ask for asylum in Greece.</p>
 
 <p>A recent report detailed evidence of an <a href="http://ecre.org/component/content/article/70-weekly-bulletin-articles/486-pro-asyl-accuses-greece-of-systematically-pushing-back-refugees-at-the-greek-turkish-border.html">illegal ‘push back’ policy</a> on both the land and sea border between Turkey and Greece.</p>
 
