--- a/src/html/content/refugee_life_in_italy.mustache
+++ b/src/html/content/refugee_life_in_italy.mustache
@@ -1,4 +1,4 @@
-<p>You claim asylum at the port in Bari are sent to Rome where you are given a temporary place to stay.</p>
+<p>You claim asylum at the port in Bari and are sent to Rome where you are given a temporary place to stay.</p>
 
 <p>You are eventually given refugee status, but the Italian state’s asylum protection system (SPRAR) has a long waiting list. Without housing or any kind of benefits, you move into <a href="http://www.theguardian.com/world/2011/oct/07/dublin-regulation-european-asylum-seekers">one of the many squats which are home to thousands of people in your situation</a>.</p>
 
