--- a/src/html/content/refugee_life_in_sweden.mustache
+++ b/src/html/content/refugee_life_in_sweden.mustache
@@ -2,7 +2,7 @@
 
 <p>You explain to the officials why you left Syria and within a month you are told you have permanent residence, an offer they have made to nearly all Syrians since September 2013. You are given social housing and free Swedish lessons.</p>
 
-<p>The way that refugees are treated varies wildly from country to country. Experts warn that as long as these differences exist, people will continue to make dangerous journeys to reach countries where they feel have support in the challenging task of building a new life.</p>
+<p>The way that refugees are treated varies wildly from country to country. Experts warn that as long as these differences exist, people will continue to make dangerous journeys to reach countries where they feel they will have support in the challenging task of building a new life.</p>
 
 <p>Of all the Syrians who have claimed asylum in Europe since the conflict began, around 55,000 people, more than 70 per cent made their claims in just two countries, Germany and Sweden.</p>
 
