--- a/src/html/content/aleppo.mustache
+++ b/src/html/content/aleppo.mustache
@@ -1,4 +1,4 @@
-<p>Your name is Karima. Your are a 28-year-old Sunni woman from Aleppo, and you have two children, a girl aged eight, and a 10-year-old boy. Your husband was killed in a mortar attack three months ago. The air strikes have continued - a recent bomb, you hear, <a href="http://www.theguardian.com/world/2013/dec/23/syria-barrel-bombs-87-children-dead">killed 87 children</a> - and you now feel you must try to leave Syria.</p>
+<p>Your name is Karima. You are a 28-year-old Sunni woman from Aleppo, and you have two children, a girl aged eight, and a 10-year-old boy. Your husband was killed in a mortar attack three months ago. The air strikes have continued - a recent bomb, you hear, <a href="http://www.theguardian.com/world/2013/dec/23/syria-barrel-bombs-87-children-dead">killed 87 children</a> - and you now feel you must try to leave Syria.</p>
 
 <p>Many of your friends and family have already fled, most to neighbouring countries where they are in refugee camps; few have travelled into Europe. Only 55,000 Syrian refugees - 2.4 per cent of the total number of people who have fled Syria - have claimed asylum in the EU. </p>
 
