changed <b> copy, styling

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -201,6 +201,7 @@ figure.interactive {
         font-family: "AgateSans", Arial, sans-serif;
         line-height:1.5em;
         color:#565656;
+        text-align:center;
     }
     .button-container{
         width:90%;
