changes to end buttons

--- a/src/html/content/share_and_replay.mustache
+++ b/src/html/content/share_and_replay.mustache
@@ -1,5 +1,9 @@
 <div class="share_block">
-	<p>The journey you have just been on is only one of many trod every day by refugees fleeing war and famine. When their journey is over, they, of course, do not have the luxury of starting again to see how things could have worked out differently. But if you would like to, you can start again using the button below. Or you can share the journey you have completed.</p>
+	<p>The journey you have just been on is only one of many trod every day by refugees fleeing war and famine. When their journey is over, they, of course, do not have the luxury of starting again to see how things could have worked out differently. But if you would like to, you can start again using the button below.</p>
+
+<p class="restart-btn-container">
+    <button class="restart choice-btn">Back to square one</button>
+</p>
 
 	<div class="share_links">
 	    <button class="share-facebook">
@@ -10,6 +14,3 @@
 	    </button>
 	</div>
 </div>
-<p class="restart-btn-container">
-    <button class="restart choice-btn">Back to square one</button>
-</p>
