--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -52,9 +52,11 @@ figure.interactive {
     }
 
     h2 {
-        margin: 1.5em 0 1em;
+        margin: 1.5em 0 1em !important;
         font-family: "EgyptianHeadline", georgia, serif;
         font-size: 18px;
+        line-height:1.2em;
+        border:none !important;
     }
 
     a{
@@ -152,18 +154,19 @@ figure.interactive {
     .scene-title {
         background: rgba(0, 0, 0, 0.4);
         overflow:hidden;
-        padding: 10px;
+        padding: 8px 10px 10px;
         margin: 0;
         
 
         h2{
             color: rgb(255,255,255);
-            margin:0;
+            margin:0 !important;
             font-size: 14px;
-            font-weight: normal;
+            font-weight: normal !important;
             font-family: "AgateSans", arial, sans-serif;
-            line-height: normal;
+            line-height: normal !important;
             float:left;
+            border:none !important;
         }
         p{
             float:right;
