--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -48,6 +48,13 @@ figure.interactive {
                 }
             }
         }
+
+        .credits{
+            width:80%;
+            margin:40px auto 20px;
+            text-align:center;
+            line-height:1.5em;
+        }
     }
 
 
