changed link styling

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -67,8 +67,8 @@ figure.interactive {
     }
 
     a{
-        color:#aaa;
-        text-decoration: none;
+        color:#575757;
+        text-decoration: underline;
     }
 
     a:hover{
@@ -125,7 +125,7 @@ figure.interactive {
 
     .end{
         a{
-            color:#c7c7c7;
+            color:#fff;
         }
         .scene-inner {
             background-color: #696969;
